src/objects/TFL_Service__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>TFL API Credentials</description>
    <fields>
        <fullName>Applciation_Keys__c</fullName>
        <label>Applciation Keys</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <description>Application ID</description>
        <label>Application ID</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Include details of the disruptions that are causing the line status including the affected stops and routes</inlineHelpText>
        <label>Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <inlineHelpText>A comma-separated list of modes to filter by. e.g. tube,dlr</inlineHelpText>
        <label>Mode</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TFL Service</label>
</CustomObject>